--- a/.github/workflows/java-selenium-tests.yml
+++ b/.github/workflows/java-selenium-tests.yml
@@ -21,6 +21,8 @@ jobs:
       uses: actions/setup-java@v2
       with:
         java-version: '11'
+        distribution: 'adopt'
+        cache: 'maven'
 
     - name: Build with Maven
       run: mvn clean install
