--- a/.github/workflows/playwright-tests.yml
+++ b/.github/workflows/playwright-tests.yml
@@ -26,6 +26,10 @@ jobs:
       run: npm install
       working-directory: playwright/sauce-demo-automation
 
+    - name: Install Playwright Browsers
+      run: npx playwright install
+      working-directory: playwright/sauce-demo-automation
+
     - name: Run Playwright Tests
       run: npm test
       working-directory: playwright/sauce-demo-automation
