--- a/java-selenium/sauce-demo-automation/pom.xml
+++ b/java-selenium/sauce-demo-automation/pom.xml
@@ -13,6 +13,8 @@
     <selenium.version>4.10.0</selenium.version>
     <testng.version>7.7.0</testng.version>
     <webdrivermanager.version>5.5.0</webdrivermanager.version>
+    <maven.compiler.source>11</maven.compiler.source>
+    <maven.compiler.target>11</maven.compiler.target> 
   </properties>
 
   <dependencies>
@@ -39,6 +41,15 @@
 
   <build>
     <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.8.1</version>
+        <configuration>
+          <source>${maven.compiler.source}</source>
+          <target>${maven.compiler.target}</target>
+        </configuration>
+      </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
