--- a/java-selenium/sauce-demo-automation/pom.xml
+++ b/java-selenium/sauce-demo-automation/pom.xml
@@ -14,7 +14,7 @@
     <testng.version>7.7.0</testng.version>
     <webdrivermanager.version>5.5.0</webdrivermanager.version>
     <maven.compiler.source>11</maven.compiler.source>
-    <maven.compiler.target>11</maven.compiler.target> 
+    <maven.compiler.target>11</maven.compiler.target>
   </properties>
 
   <dependencies>
@@ -36,6 +36,12 @@
       <groupId>io.github.bonigarcia</groupId>
       <artifactId>webdrivermanager</artifactId>
       <version>${webdrivermanager.version}</version>
+    </dependency>
+    <!-- slf4j Logger -->
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-simple</artifactId>
+      <version>1.7.30</version>
     </dependency>
   </dependencies>
 
