--- a/.github/workflows/java-selenium-tests.yml
+++ b/.github/workflows/java-selenium-tests.yml
@@ -1,4 +1,4 @@
-name: Java Selenium Tests
+name: Java Selenium Workflow
 
 on:
   push:
@@ -10,24 +10,35 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  checkout-code:
     runs-on: ubuntu-latest
-
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
 
+  setup-environment:
+    runs-on: ubuntu-latest
+    needs: checkout-code
+    steps:
     - name: Set up JDK
       uses: actions/setup-java@v2
       with:
         java-version: '11'
         distribution: 'adopt'
-        cache: 'maven'
+        #cache: 'maven'
 
+  build:
+    runs-on: ubuntu-latest
+    needs: setup-environment
+    steps:
     - name: Build with Maven
       run: mvn clean install
       working-directory: java-selenium/sauce-demo-automation
 
+  run-tests:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
     - name: Run Selenium Tests
       run: mvn test
       working-directory: java-selenium/sauce-demo-automation
