Update playwright-tests.yml to use npx playwright to run tests

--- a/.github/workflows/playwright-tests.yml
+++ b/.github/workflows/playwright-tests.yml
@@ -44,7 +44,7 @@ jobs:
         node-version: '20'
 
     - name: Run Playwright Tests
-      run: npm test
+      run: npx playwright test
       working-directory: playwright/sauce-demo-automation
 
     - name: Upload Test Report
