--- a/.github/workflows/playwright-tests.yml
+++ b/.github/workflows/playwright-tests.yml
@@ -32,19 +32,11 @@ jobs:
 
   test:
     runs-on: ubuntu-latest
-    needs: build  # This job depends on the build job
+    needs: build
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-
-    - name: Set up Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: '20'
-
     - name: Run Playwright Tests
-      run: npx playwright test
+      run: npm test
       working-directory: playwright/sauce-demo-automation
 
     - name: Upload Test Report
