--- a/.github/workflows/java-selenium-tests.yml
+++ b/.github/workflows/java-selenium-tests.yml
@@ -14,18 +14,19 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout code
-      uses: actions/checkout@v2
+      uses: actions/checkout@v4
 
   setup-environment:
     runs-on: ubuntu-latest
     needs: checkout-code
     steps:
     - name: Set up JDK
-      uses: actions/setup-java@v2
+      uses: actions/setup-java@v4
       with:
         java-version: '11'
-        distribution: 'adopt'
-        #cache: 'maven'
+
+    - name: Install Maven
+      run: sudo apt-get install -y maven
 
   build:
     runs-on: ubuntu-latest
@@ -44,8 +45,8 @@ jobs:
       working-directory: java-selenium/sauce-demo-automation
 
     - name: Upload Test Results
-      if: always()  # Ensures the step runs even if the previous steps fail
-      uses: actions/upload-artifact@v3
+      if: always()
+      uses: actions/upload-artifact@v4
       with:
         name: test-results
         path: |
