--- a/.github/workflows/java-selenium-tests.yml
+++ b/.github/workflows/java-selenium-tests.yml
@@ -10,42 +10,30 @@ on:
   workflow_dispatch:
 
 jobs:
-  checkout-code:
+  build-and-test:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
 
-  setup-environment:
-    runs-on: ubuntu-latest
-    needs: checkout-code
-    steps:
     - name: Set up JDK
       uses: actions/setup-java@v4
       with:
         java-version: '11'
-
+        
     - name: Install Maven
       run: sudo apt-get install -y maven
 
-  build:
-    runs-on: ubuntu-latest
-    needs: setup-environment
-    steps:
     - name: Build with Maven
       run: mvn clean install
       working-directory: java-selenium/sauce-demo-automation
 
-  run-tests:
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
     - name: Run Selenium Tests
       run: mvn test
       working-directory: java-selenium/sauce-demo-automation
 
     - name: Upload Test Results
-      if: always()
+      if: always()  # Ensures this step runs even if the previous steps fail
       uses: actions/upload-artifact@v4
       with:
         name: test-results
