--- a/.github/workflows/java-selenium-tests.yml
+++ b/.github/workflows/java-selenium-tests.yml
@@ -30,7 +30,7 @@ jobs:
       working-directory: ./java-selenium/sauce-demo-automation
 
     - name: Run Tests
-      run: mvn test
+      run: mvn test -Dheadless=true
       working-directory: ./java-selenium/sauce-demo-automation
 
     - name: Upload Test Results
