--- a/.github/workflows/java-selenium-tests.yml
+++ b/.github/workflows/java-selenium-tests.yml
@@ -22,9 +22,13 @@ jobs:
         java-version: '11'
         distribution: 'temurin'  # Commonly used distributions are 'temurin', 'adopt', or 'zulu'
 
-    - name: Install Maven
-      run: sudo apt-get install -y maven
-
+    - name: Install Chrome
+      run: |
+            wget -q -O - https://dl.google.com/linux/linux_signing_key.pub | sudo apt-key add -
+            echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" | sudo tee /etc/apt/sources.list.d/google-chrome.list
+            sudo apt-get update
+            sudo apt-get install -y google-chrome-stable
+            
     - name: Build with Maven
       run: mvn clean install
       working-directory: ./java-selenium/sauce-demo-automation
