Update java-selenium-tests.yml give executable permission to chrome

--- a/.github/workflows/java-selenium-tests.yml
+++ b/.github/workflows/java-selenium-tests.yml
@@ -26,7 +26,12 @@ jobs:
       run: |
           wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
           sudo apt install ./google-chrome-stable_current_amd64.deb -y
-            
+          
+    - name: Set permissions for Chrome and Chromedriver
+      run:  |
+          sudo chmod +x "/usr/bin/chromedriver"
+          sudo chmod +x "/usr/bin/google-chrome"
+          
     - name: Build with Maven
       run: mvn clean install
       working-directory: ./java-selenium/sauce-demo-automation
